# secure-game-assets

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.sh
.github/: FUNDING.yml
cmd-tool/: CMakeLists.txt
cmd-tool/src/: log.hpp  main.cpp  packer.cpp  packer.hpp
example/: CMakeLists.txt  main.cpp
example/resources/game_assets/: a.txt
example/resources/game_assets/subfolder/: b.txt
example/resources/menu_assets/: menu_file.txt
lib/: CMakeLists.txt
lib/include/: crypto.hpp  endianness.hpp  file_base.hpp  header.hpp  reader.hpp  sga_container.hpp  sga_file.hpp  sga_manager.hpp  status.hpp  writer.hpp
lib/src/: endianness.cpp  file_base.cpp  header.cpp  log.cpp  reader.cpp  sga_container.cpp  sga_file.cpp  sga_manager.cpp  writer.cpp
test/: CMakeLists.txt  endianness_tests.cpp  header_tests.cpp  main.cpp  reader_tests.cpp  writer_tests.cpp
